# dissect.fat

./: .git-blame-ignore-revs  .gitattributes  COPYRIGHT  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
dissect/fat/: __init__.py  c_exfat.py  c_exfat.pyi  c_fat.py  c_fat.pyi  exceptions.py  exfat.py  exfatfs.py  fat.py  fatfs.py
tests/: conftest.py  test_exceptions.py  test_exfat.py  test_fat.py
tests/data/: disk2.img  disk3.img
